Fix on mobile styling

--- a/src/components/nav.module.css
+++ b/src/components/nav.module.css
@@ -47,10 +47,11 @@
 
 .navigation {
   transform: translateX(100%);
-  position: absolute;
+  position: fixed;
   width: 100vw;
   top: 0;
   right: 0;
+  bottom: 0;
   background-color: var(--secondary);
   transition: transform 0.4s ease-in-out;
 }
@@ -76,7 +77,7 @@
 }
 
 .navigation_inner {
-  height: 100vh;
+  height: 100%;
   display: flex;
   flex-flow: column nowrap;
   padding: 112px 0 0 0;
